2010-08-14  Vadim Kurland  <vadim@vk.crocodile.org>

	* set version to 4.1.1

2010-08-10  Vadim Kurland  <vadim@vk.crocodile.org>

	* v4.1.0 released

2010-08-09  Vadim Kurland  <vadim@vk.crocodile.org>

	* ObjectGroup.cpp (validateChild): fixed fwbuilder:ticket:1679
	"Group allows invalid objects to be added (Policy, NAT, Routing)".
	Change done in ObjectGroup and ServiceGroup.

2010-06-17  Vadim Kurland  <vadim@vk.crocodile.org>

	* ObjectMatcher.cpp (ObjectMatcher::checkComplexMatchForSubnet):
	added method to check object matching with subnets

2010-06-12  Vadim Kurland  <vadim@vk.crocodile.org>

	* CustomService.cpp (CustomService::CustomService): fixed missing
	class variable initialization.

	* FWObjectDatabase.cpp (FWObjectDatabase::setPredictableIds):
	this method is used to replace random string object ids with
	predictable ones; useful for unit tests because it allows us
	to create data files that can be compared. 
	Fixes fwbuilder:ticket:1517

	* FWReference.cpp (FWReference::toXML): always use int id when
	saving to xml. This allows us to change string ids if necessary
	using call to FWObjectDatabase::changeStringId() and it will
	change both in id and ref attributes when objects are saved to
	xml file. This is needed for unit tests to let tests create .fwb
	files with predictable IDs that can be compared later.
	See fwbuilder:ticket:1517

	* FWObjectDatabase.cpp (FWObjectDatabase::changeStringId): this
	method changes string ID associated with given int ID. Using this
	in unit tests to create .fwb files with predictable IDs that can
	be compared with golden files.
	See fwbuilder:ticket:1517

2010-06-02  vadim  <vadim@vk.crocodile.org>

	* Preprocessor.cpp (Preprocessor::findMultiAddressObjectsUsedInRules):
	fixed #1485 "dns name object is recognized as an empty group when
	it appears in shared rule set"

2010-05-12  vadim  <vadim@vk.crocodile.org>

	* Compiler.cpp (Compiler::epilog): fixed SourceForge bug #3000159