@@ -1,3 +1,11 @@
+2010-08-19  Vadim Kurland  <vadim@vk.crocodile.org>
+
+	* NATCompiler.cpp (classifyNATRule::processNext):
+	fixed fwbuilder:ticket:1685 "iptables redirecting NAT
+	rules in the OUTPUT chain". NAT rules should be allowed to
+	translate from CustomService to TCP or UDP service, provided
+	CustomService object is configured with matching protocol.
+
 2010-08-14  Vadim Kurland  <vadim@vk.crocodile.org>
 
 	* set version to 4.1.1
